Button fixed popup

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <img src="images/telephony/background.png" alt="">
             <h3>Замовити дзвінок</h3>
             <p>Ми зателефонуємо Вам та вирішемо Ваше питання!</p>
-            <button class="telephony-popup" id="button">
+            <button class="telephony-popup bingc-action-open-passive-form" id="button">
                 <span>Отримати консультацію </span>
             </button>
         </div>
